# DM_Project

./: .gitignore  Makefile  README.md  TODO.md  jac_test.py  main.out  main.py  main.tex  main.toc  pyproject.toml
src/dmp/: __init__.py  clean_Description.py  clean_description.py  clean_ordered_columns.py  clean_suggested_players.py  config.py  convert_string_column_to_ints.py  convert_zeros_into_nan.py  data_cleaning.py  merge_columns_with_prefix.py  my_graphs.py  remove_columns.py  utils.py
src/dmp/cleaning/: __init__.py  clean_description.py  clean_ordered_columns.py  data_cleaning.py  remove_columns.py
src/dmp/data_classification/: KNN.py  Naive_Bayes.py  __init__.py  classificate_df.py  classification_utils.py  decision_tree.py  regression.py  split_df.py
src/dmp/data_cleaning/: __init__.py  clean_description.py  clean_ranks_and_cats.py  convert_wrong_values_into_nan.py  data_cleaning.py
src/dmp/data_clustering/: __init__.py  cluster_df.py  dbscan.py  hierarchical.py  k_mean.py
src/dmp/data_pattern_mine/: __init__.py  apriori.py  pattern_mine_df.py  pm_algorithms.py
src/dmp/data_preparation/: __init__.py  merge_ratings_columns.py  pca.py  prepare_df.py  sampling.py  transform_columns.py
src/dmp/data_understanding/: __init__.py  analysis_by_descriptors.py  categories_rankings_stats.py  column_understanding.py  couple_columns_understanding.py  description_understanding.py  make_hist.py  understand_df.py
static/: Feature-Description.txt
test/: test_data_cleaning.py  test_data_clustering.py  test_data_understanding.py
(+3 files in other folders)
