[project]
name = "dmp"
version = "0.1.0"
description = "Progetto finale per il corso di Data Mining."
readme = "README.md"
requires-python = ">=3.8"

# Dipendenze del progetto
dependencies = [
    "pandas",
    "numpy",
    "matplotlib"
]

# Comando CLI per eseguire main.py
[project.scripts]
clean-dataset = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Indichiamo a Hatchling dove si trova il codice del pacchetto
[tool.hatch.build.targets.wheel]
packages = ["src/dmp"]

# Configurazione dei test
[tool.pytest]
pythonpath = "src"
testpaths = ["test"]
