[project]
name = "dmp"
version = "0.1.0"
description = "Progetto finale per il corso di Data Mining."
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pandas",
    "numpy",
    "matplotlib"
]

# Comando CLI per eseguire main.py
[project.scripts]
clean-dataset = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest]
pythonpath = "src"
testpaths = ["test"]